# ESP_IDF

./: README.md
ADC/: CMakeLists.txt
ADC/main/: main.c
Control_Gatas/: CMakeLists.txt
Control_Gatas/main/: main.c
EEPROM/: CMakeLists.txt
EEPROM/main/: nvs_string.c  nvs_value_example_main.c
I2S_2/: CMakeLists.txt
Interrupcion/: CMakeLists.txt
Interrupcion/main/: main.c
JSON/: CMakeLists.txt  sdkconfig
JSON/main/: rest_server.c
Microfono_I2S/: CMakeLists.txt  partitions.csv  sdkconfig
Mutex/: CMakeLists.txt
Mutex/main/: main.c
PWM/: CMakeLists.txt
PWM/main/: main.c
Queues/: CMakeLists.txt
Queues/main/: main.c
Semaohores_Binary/: CMakeLists.txt
Semaohores_Binary/main/: main.c
Timmer/: CMakeLists.txt
Timmer/main/: main.c
blink/blink/: sdkconfig.old
hola_IDF/: CMakeLists.txt
hola_IDF/main/: main.c
test_TfLite/: CMakeLists.txt  Makefile
test_TfLite/main/: CMakeLists.txt
tf_spech/: Makefile  sdkconfig  sdkconfig.old
tf_spech/main/: CMakeLists.txt  audio_provider.cc
tf_test/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
tf_test/main/: CMakeLists.txt  main_functions.cc  output_handler.cc  output_handler.h
webserverRGB/: sdkconfig  sdkconfig.old
webserverRGB/main/: CMakeLists.txt  component.mk  main.c  view.html
